# deep_learning_pong_project

./: .gitignore  LICENSE  README.md  direct_rl_trainer.py  game_state.txt  pong_agent_final.pth  pong_env.py  pong_rl_trainer.py  ppo_agent.py
pong_py/: elements.py  main.py
project pong/pong/: main.py
project_pong_cpp/: CMakeLists.txt  CMakePresets.json  main.cpp
project_pong_cpp/include/: Ball.h  Composites.h  Constants.h  Paddle.h  PlayerScore.h  RLInterface.h  Vec2.h
project_pong_cpp/src/: Ball.cpp  Paddle.cpp  PlayerScore.cpp  Vec2.cpp
rl_trainer/: game_state.py  game_state.txt  pong_agent_final_30ME_-50...50_uniform_dist_2000_episodes.pth  pong_agent_final_8ME_-30...30_uniform_dist_1000.pth  pong_env.py  pong_rl_trainer.py  ppo_agent.py  view_weights.py
